--- a/网站导航/网站导航.md
+++ b/网站导航/网站导航.md
@@ -1,6 +1,5 @@
 
 # 网站导航
----
 
 [toc]
 
@@ -9,6 +8,8 @@
 [开头](#网站导航)
 
 ### 编程
+[开头](#网站导航)
+
 [Java和Python编译器官网](https://www.jetbrains.com)
 [JAVA-JDK配置环境变量安装官网](https://www.oracle.com)
 [python解释器官网](https://www.python.org)
@@ -21,11 +22,20 @@
 [思源 markdown编辑器笔记官网](https://b3log.org/siyuan)
 [typora markdown编辑器官网](https://typoraio.cn)
 
-### office办公
+### 办公
+[开头](#网站导航)
+
+[钉钉官网](https://page.dingtalk.com/wow/z/dingtalk/simple/ddhomedownload#/)
+[WPS官网](https://www.wps.cn/)
 [office tool plus官网](https://otp.landian.vip)
 [islide PPT辅助工具官网](https://www.islide.cc)
+[office plus官网](https://www.officeplus.cn/)
 
 ### 系统
+[开头](#网站导航)
+
+[微软官网](https://www.microsoft.com/)
+[微软电脑管家官网](https://pcmanager.microsoft.com/)
 [极客狗装机大师官网](http://jkg.vhwkcl.cn)
 [逍遥安卓模拟器官网](https://www.xyaz.cn/index2.html?bd_vid=11445056250073957040)
 [夜神安卓模拟器官网](https://www.yeshen.com/)
@@ -33,52 +43,82 @@
 [mumu安卓模拟器官网](https://mumu.163.com/)
 
 ### 视频
+[开头](#网站导航)
+
 [哔哩哔哩电脑端官网下载](https://app.bilibili.com/)
 
 ### 学习
+[开头](#网站导航)
+
 [知犀思维导图官网](https://www.zhixi.com)
 
 ### 输入法
+[开头](#网站导航)
+
 [讯飞输入法官网](https://srf.xunfei.cn)
 
 ### 聊天
+[开头](#网站导航)
+
 [QQ官网](https://im.qq.com)
 [微信官网](https://weixin.qq.com)
 
 ### 翻译
+[开头](#网站导航)
+
 [网易有道词典官网](https://cidian.youdao.com)
 
 ### 音乐
+[开头](#网站导航)
+
 [酷狗官网](https://m.kugou.com)
 
 ### 桌面
+[开头](#网站导航)
+
 [人工桌面官网](https://n0va.mihoyo.com)
 
 ### 安全
+[开头](#网站导航)
+
 [火绒官网](https://www.huorong.cn)
 
 ### 卸载软件
+[开头](#网站导航)
+
 [geek官网](https://geekuninstaller.com)
 
 ### 硬件
+[开头](#网站导航)
+
 [图吧工具箱官网](http://www.tbtool.cn)
 
 ### 远程控制
+[开头](#网站导航)
+
 [to desk官网](https://www.todesk.com)
 
 ### 软件下载站
+[开头](#网站导航)
+
 [下载之家官网](http://www.downza.cn)
 [binzip官网](https://www.bandisoft.com)
 [艾薇下载官网](http://www.aiweibk.com)
 [绿色资源网](http://www.downcc.com/)
 
 ### 文件处理
+[开头](#网站导航)
+
 [格式工厂](http://formatfactory.org/CN/download.html)
 
 ### flash动画
+[开头](#网站导航)
+
 [flash中心官网](https://www.flash.cn/)
 
 ### 娱乐
+[开头](#网站导航)
+
 [stram官网](https://store.steampowered.com/)
 [哔哩哔哩加速器官网](https://www.biubiu001.com/)
 [小鸡街机模拟器官网](https://www.xiaoji001.com/)
@@ -87,9 +127,15 @@
 [开头](#网站导航)
 
 ### 视频网站
+[开头](#网站导航)
+
+[抖音官网](https://www.douyin.com/)
 [哔哩哔哩官网](https://www.bilibili.com)
 
 ### 编程学习
+[开头](#网站导航)
+
+[Github官网](https://github.com/)
 [CSDN官网](https://www.csdn.net)
 [程序员接单，码市官网](https://codemart.com)
 [程序员接单，兼职，猪八戒官网](https://www.zbj.com)
@@ -106,19 +152,26 @@
 [markdown网页编辑器官网](https://stackedit.cn)
 
 ### 图片处理
+[开头](#网站导航)
+
 [美图网站，萌图社官网](https://moetu.club/?ref=www.wezhi.com)
 [修图工具，改图鸭官网](https://www.gaituya.com)
 
 ### 下载资源
+[开头](#网站导航)
+
 [论文下载，idata官网](https://www.cn-ki.net)
 [高清图片下载，pexels官网](https://www.pexels.com)
 
 ### 网站集合
+[开头](#网站导航)
+
 [找网站的网站，addog官网](https://www.addog.vip)
 [futurepediaAI工具合集网站](https://www.futurepedia.io/ai-tools/no-code)
 [AI工具集网站](https://ai-bot.cn/)
 
 ### AI工具
+[开头](#网站导航)
+
 [文心一言官网](https://yiyan.baidu.com/welcome)
 
----
