--- a/网站导航/网站导航.md
+++ b/网站导航/网站导航.md
@@ -122,6 +122,9 @@
 [stram官网](https://store.steampowered.com/)
 [哔哩哔哩加速器官网](https://www.biubiu001.com/)
 [小鸡街机模拟器官网](https://www.xiaoji001.com/)
+[原神官网](https://www.yuanshen.com/#/)
+[崩坏三官网](https://www.bh3.com/)
+[崩坏星穹铁道官网](https://sr.mihoyo.com/?nav=home)
 
 ## 宝藏网站
 [开头](#网站导航)
